@@ -1,6 +1,12 @@
 2012-03-18 Adam Johansen <a.m.johansen@warwick.ac.uk>
-	* src/bspfGaussianOptimal.R tweaked & standardised plotting.
-	* src/pfNonlinBS.R fixed plotting bug.
+	* src/pfEx.cpp renamed to pflineartbs.cpp
+	* inst/include/pffuncs.h renamed to pflineartbs.h
+	* R/pfEx.R renamed to pfLineartBS.R
+	* man/pfEx.Rd renamed to pfLineartBS.Rd
+	
+	* R/bspfGaussianOptimal.R tweaked & standardised plotting.
+	* R/pfNonlinBS.R fixed plotting bug.
+
 	* deprecated moved all rareEvents files here.
 
 2012-03-17  Adam Johansen <a.m.johansen@warwick.ac.uk>
